Update Claude Code integration to support company LiteLLM proxy
- Modify claude-docs-reviewer.py to support both LiteLLM proxy and direct Anthropic API
- Update workflow to use LITELLM_API_KEY and LITELLM_BASE_URL environment variables
- Set default base URL to https://llm-dev.sonatype.com for company proxy
- Maintain backward compatibility with direct Anthropic API as fallback

This resolves the 401 authentication error by using the company's LiteLLM proxy
instead of trying to connect directly to api.anthropic.com.

--- a/.github/workflows/docs-review.yml
+++ b/.github/workflows/docs-review.yml
@@ -46,7 +46,12 @@ jobs:
           
       - name: Run Claude Code Documentation Review
         env:
+          # Company LiteLLM proxy configuration (preferred)
+          LITELLM_BASE_URL: ${{ secrets.LITELLM_BASE_URL || 'https://llm-dev.sonatype.com' }}
+          LITELLM_API_KEY: ${{ secrets.LITELLM_API_KEY }}
+          # Fallback to direct Anthropic API
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          # GitHub configuration
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
           REPO_OWNER: ${{ github.repository_owner }}
